Fixed issues with styles on mobile phones

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,14 +2,19 @@
   margin: 0 25px 0 25px;
 }
 
-.image, .image-selector {
+.image {
   width: 100%;
 }
 
 .image-selector {
+/*
   position: absolute;
   bottom: 15px;
-  width: 100%;
+*/
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 80%;
+  margin-left: 10%;
   left: 0;
 }
 
@@ -27,8 +32,10 @@
 
 @media screen and (max-width: 768px) and (min-height: 730px) {
   .copy {
+/*
     position: absolute;
     bottom: 150px;
+*/
     left: 5%;
     font-size: 20px;
     width: 90%;
@@ -49,7 +56,8 @@
   .image-selector {
     position: relative;
     max-width: 450px;
-    margin-top: 45px;
+    margin-left: 0;
+/*     margin-top: 45px; */
   }
   .copy.ss {
     display: none;
@@ -91,6 +99,7 @@
   .image-selector {
     position: relative;
     margin-top: 45px;
+    margin-left: 0;
   }
 }
 
@@ -101,6 +110,7 @@
     width: 100%;
     left: 0;
     max-width: 20000px;
+    margin-left: 0;
   }
   .copy {
     font-size: 28px;
